--- a/content/themes/ezyzip/partials/post-card.hbs
+++ b/content/themes/ezyzip/partials/post-card.hbs
@@ -4,7 +4,7 @@ which templates loop over to generate a list of posts. --}}
 <article class="post-card {{post_class}} {{#is "home"}}{{#if feature_image}}{{#has index="0"}}post-card-large{{/has}}{{/if}}{{/is}}">
 
     {{#if feature_image}}
-    <a class="post-card-image-link" href="{{url}}">
+    <a class="post-card-image-link" href="/blog/{{url}}">
         {{!-- This is a responsive image, it loads different sizes depending on device
         https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
         <img class="post-card-image"
@@ -22,7 +22,7 @@ which templates loop over to generate a list of posts. --}}
 
     <div class="post-card-content">
 
-        <a class="post-card-content-link" href="{{url}}">
+        <a class="post-card-content-link" href="/blog/{{url}}">
             <header class="post-card-header">
                 {{#if primary_tag}}
                     {{#primary_tag}}
@@ -41,11 +41,11 @@ which templates loop over to generate a list of posts. --}}
                 {{#foreach authors}}
                 <li class="author-list-item">
                     {{#if profile_image}}
-                    <a href="{{url}}" class="static-avatar">
+                    <a href="/blog/{{url}}" class="static-avatar">
                         <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
                     </a>
                     {{else}}
-                    <a href="{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
+                    <a href="/blog/{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
                     {{/if}}
                 </li>
                 {{/foreach}}
