--- a/content/themes/ezyzip/partials/post-card.hbs
+++ b/content/themes/ezyzip/partials/post-card.hbs
@@ -4,7 +4,7 @@ which templates loop over to generate a list of posts. --}}
 <article class="post-card {{post_class}} {{#is "home"}}{{#if feature_image}}{{#has index="0"}}post-card-large{{/has}}{{/if}}{{/is}}">
 
     {{#if feature_image}}
-    <a class="post-card-image-link" href="/blog/{{url}}">
+    <a class="post-card-image-link" href="/blog{{url}}">
         {{!-- This is a responsive image, it loads different sizes depending on device
         https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
         <img class="post-card-image"
@@ -22,7 +22,7 @@ which templates loop over to generate a list of posts. --}}
 
     <div class="post-card-content">
 
-        <a class="post-card-content-link" href="/blog/{{url}}">
+        <a class="post-card-content-link" href="/blog{{url}}">
             <header class="post-card-header">
                 {{#if primary_tag}}
                     {{#primary_tag}}
@@ -41,17 +41,17 @@ which templates loop over to generate a list of posts. --}}
                 {{#foreach authors}}
                 <li class="author-list-item">
                     {{#if profile_image}}
-                    <a href="/blog/{{url}}" class="static-avatar">
+                    <a href="/blog{{url}}" class="static-avatar">
                         <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
                     </a>
                     {{else}}
-                    <a href="/blog/{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
+                    <a href="/blog{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
                     {{/if}}
                 </li>
                 {{/foreach}}
             </ul>
             <div class="post-card-byline-content">
-                <span>{{#has author="count:>2"}}Multiple authors{{else}}{{authors}}{{/has}}</span>
+                <span>{{#has author="count:>2"}}Multiple authors{{else}}<div style="text-transform: lowercase;"><a style="text-transform: none;" href="/blog/author/{{name}}">{{name}}</a></div>{{/has}}</span>
                 <span class="post-card-byline-date"><time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
             </div>
         </footer>
